--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "how-to-npm nodeschool tutorial project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/zebbo/how-to-npm/issues"
   },
-  "homepage": "https://github.com/zebbo/how-to-npm#readme"
+  "homepage": "https://github.com/zebbo/how-to-npm#readme",
+  "dependencies": {
+    "@linclark/pkg": "^1.0.2"
+  }
 }
