--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "url": "https://github.com/zebbo/how-to-npm/issues"
   },
   "homepage": "https://github.com/zebbo/how-to-npm#readme",
-  "dependencies": {
-    "@linclark/pkg": "^1.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {}
 }
